--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
+nav {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  min-height: 10vh;
+  background-color: lightskyblue;
+}
+
+.nav-links {
+  width: 40%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+}
+
+.nav-router-links {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cards-container {
+  display: flex;
+  gap: 50px;
+  width: 100vw;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.item-card {
+  border-radius: 20px;
+  border: 2px solid black;
+  min-width: 300px;
+  height: 400px;
+  background-color: lightskyblue;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  font-size: 24px;
 }
 
-.App-link {
-  color: #61dafb;
+.card-color {
+  width: 80%;
+  height: 40%;
+  border: 2px solid black;
+  border-radius: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.quantity-input {
+  width: 30%;
+}
+
+.cart-item-container {
+  margin: 30px;
+  border-radius: 10px;
+  display: flex;
+  background-color: lightskyblue;
+  width: 30%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.cart-del-button {
+  height: 30px;
+}
+
+.cart-color {
+  width: 20px;
+  height: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.clear-cart {
+  margin-left: 250px;
+}
+
+.check-out-container {
+  margin-top: 50px;
+  margin-left: 120px;
+  display: flex;
+  width: 250px;
+  justify-content: space-evenly;
+  align-items: center;
 }
